<resources>
    <string name="app_name">Agenda Escolar</string>
    <string name="ic_house" translatable="false">&#xf015;</string>
    <string name="txt_house">Inicio</string>
    <string name="ic_classes">&#xf02d;</string>
    <string name="txt_classes">Clases</string>
    <string name="ic_messages">&#xf075;</string>
    <string name="txt_messages">Mensajes</string>
    <string name="ic_attendance">&#xf133;</string>
    <string name="txt_attendance">Asistencia</string>
    <string name="ic_config">&#xf013;</string>
    <string name="txt_config">Config</string>
    <string name="txt_myAgenda">Mi Agenda</string>
    <string name="txt_date">Fecha</string>
    <string name="txt_selectDate">Seleccionar fecha:</string>
    <string name="txt_contentDescription">Agregar clase</string>
    <string name="txt_recordatorios">Recordatorios</string>
    <string name="txt_contentDescription_add_recordatorio">Agregar recordatorio</string>

    <string name="dialog_registrar_clase_title">Registrar clase</string>
    <string name="dialog_registrar_recordatorio_title">Registrar recordatorio</string>
    <string name="dialog_guardar">Guardar</string>
    <string name="dialog_cancelar">Cancelar</string>

    <string name="hint_titulo_recordatorio">Título del recordatorio</string>
    <string name="hint_hora_recordatorio">Hora del recordatorio</string>
    <string name="hint_prioridad">Recordatorio</string>

    <string name="error_campos_obligatorios">Completa todos los campos para continuar.</string>
    <string name="mensaje_clase_guardada">Clase guardada correctamente.</string>
    <string name="mensaje_recordatorio_guardado">Recordatorio guardado correctamente.</string>
</resources>
