<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bar_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/panelBotones"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F5F5F5"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- BOTON INICIO -->
        <LinearLayout
            android:id="@+id/btnInicio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/free_regular"
                android:text="@string/ic_house"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_house"
                android:textSize="12sp"
                android:fontFamily="@font/advent_pro"/>

        </LinearLayout>

        <!-- BOTON AGENDA (Antes Clase) -->
        <LinearLayout
            android:id="@+id/btnAgenda"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/free_solid"
                android:text="@string/ic_classes"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_classes"
                android:textSize="12sp"
                android:fontFamily="@font/advent_pro"/>

        </LinearLayout>


        <!-- BOTON ASISTENCIA -->
        <LinearLayout
            android:id="@+id/btnAsistencia"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/free_regular"
                android:text="@string/ic_attendance"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_attendance"
                android:textSize="12sp"
                android:fontFamily="@font/advent_pro"/>

        </LinearLayout>

        <!-- BOTON CONFIG -->
        <!--<LinearLayout
            android:id="@+id/btnConfig"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/free_solid"
                android:text="@string/ic_config"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_config"
                android:textSize="12sp"
                android:fontFamily="@font/advent_pro"/>

        </LinearLayout>-->-

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>