<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <TextView
        android:id="@+id/txtMiAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/txt_myAgenda"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/txt_contentDescription"
        android:src="@android:drawable/ic_input_add"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/txtMiAgenda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtMiAgenda"
        app:tint="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/txtMiAgenda">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_selectDate"
                android:fontFamily="@font/advent_pro"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnPickerFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_input_rounded"
                android:padding="12dp"
                android:text="30/01/2026"
                android:drawableEnd="@android:drawable/ic_menu_my_calendar"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/advent_pro"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardFecha">

        <LinearLayout
            android:id="@+id/dynamicContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>